syntax = "proto3";

package seckill;
option go_package="./seckill";

service Seckill {
  rpc SeckillProducts(SeckillProductsRequest) returns (SeckillProductsResponse);
  rpc SeckillOrder(SeckillOrderRequest) returns (SeckillOrderResponse);
}

message SeckillProductsRequest {
}

message SeckillProductsResponse {
  repeated Product products = 1;
}

message SeckillOrderRequest {
  int64 user_id = 1;
  int64 product_id = 2;
}

message SeckillOrderResponse {
}

message Product {
  int64 product_id = 1;
  string name = 2;
  string desc = 3;
  string image = 4;
  int64 stock = 5;
  int64 create_time = 6;
}